--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -612,34 +612,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse12(line):\n",
-    "    springs, conditions = line.split(' ')\n",
-    "    return springs+'.', tuple(map(int, conditions.split(',')))\n",
-    "\n",
-    "data12 = data(12, parse12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "sum_records() missing 1 required positional argument: 'n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 38\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mday12\u001b[39m(data):\n\u001b[1;32m     36\u001b[0m     \u001b[39mreturn\u001b[39;00m sum_records(data), sum_records(data, \u001b[39m5\u001b[39m)\n\u001b[0;32m---> 38\u001b[0m day12(data12)\n",
+      "Cell \u001b[0;32mIn[50], line 36\u001b[0m, in \u001b[0;36mday12\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mday12\u001b[39m(data):\n\u001b[0;32m---> 36\u001b[0m     \u001b[39mreturn\u001b[39;00m sum_records(data), sum_records(data, \u001b[39m5\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: sum_records() missing 1 required positional argument: 'n'"
+     ]
     }
    ],
    "source": [
+    "def parse12(line):\n",
+    "    springs, conditions = line.split(' ')\n",
+    "    return springs, tuple(map(int, conditions.split(',')))\n",
+    "\n",
+    "data12 = data(12, parse12)\n",
+    "\n",
     "@functools.lru_cache()\n",
     "def fix_records(line, numbers, active=0):\n",
     "    if not numbers:\n",
@@ -661,41 +656,56 @@
     "    else:\n",
     "        return fix_records('.'+tail, numbers, active) + fix_records('#'+tail, numbers, active)\n",
     "\n",
+    "def sum_records(data, n=1):\n",
+    "    result = 0\n",
+    "    for spring, numbers in data:\n",
+    "        result += fix_records('?'.join([spring]*n) + '.', numbers*n)\n",
+    "        # print(spring*n, numbers*n, result)\n",
+    "    return result\n",
+    "\n",
     "def day12(data):\n",
-    "    return sum(fix_records(*record) for record in data)\n",
+    "    return sum_records(data), sum_records(data, 5)\n",
     "\n",
     "day12(data12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fix_records(\u001b[39m*\u001b[39;49mdata12[\u001b[39m0\u001b[39;49m])\n",
-      "Cell \u001b[0;32mIn[12], line 15\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m*\u001b[39mnt), active\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39;49m\u001b[39m#\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m+\u001b[39;49mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 13\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     12\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m*\u001b[39;49mnt), active\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 15\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m*\u001b[39mnt), active\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m+\u001b[39;49mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 8\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[39mif\u001b[39;00m n \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      7\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m----> 8\u001b[0m         \u001b[39mreturn\u001b[39;00m fix_records(tail, nt)\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, numbers)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m head \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m:\n",
-      "Cell \u001b[0;32mIn[12], line 15\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m*\u001b[39mnt), active\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39;49m\u001b[39m#\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m+\u001b[39;49mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 13\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     12\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m*\u001b[39;49mnt), active\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 8\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[39mif\u001b[39;00m n \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      7\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m----> 8\u001b[0m         \u001b[39mreturn\u001b[39;00m fix_records(tail, nt)\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, numbers)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m head \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m:\n",
-      "Cell \u001b[0;32mIn[12], line 13\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     12\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m*\u001b[39;49mnt), active\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 13\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     12\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m*\u001b[39;49mnt), active\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 13\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     12\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[0;32m---> 13\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(tail, (n\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m*\u001b[39;49mnt), active\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     14\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m fix_records(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active) \u001b[39m+\u001b[39m fix_records(\u001b[39m'\u001b[39m\u001b[39m#\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mtail, numbers, active)\n",
-      "Cell \u001b[0;32mIn[12], line 3\u001b[0m, in \u001b[0;36mfix_records\u001b[0;34m(line, numbers, active)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mlru_cache()\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfix_records\u001b[39m(line, numbers, active\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m     head, tail, n, nt \u001b[39m=\u001b[39m line[\u001b[39m0\u001b[39;49m], line[\u001b[39m1\u001b[39m:], numbers[\u001b[39m0\u001b[39m], numbers[\u001b[39m1\u001b[39m:]\n\u001b[1;32m      4\u001b[0m     \u001b[39mif\u001b[39;00m head \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      5\u001b[0m         \u001b[39mif\u001b[39;00m active:\n",
-      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "28606137449920"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('???.###', '???.###????.###????.###????.###????.###')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data12[0][0], '?'.join([data12[0][0]]*5)"
+   ]
   },
   {
    "cell_type": "code",
