--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -675,10 +675,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([['#', '.', '#', '#', '.', '.', '#', '#', '.'],\n",
+       "        ['.', '.', '#', '.', '#', '#', '.', '#', '.'],\n",
+       "        ['#', '#', '.', '.', '.', '.', '.', '.', '#'],\n",
+       "        ['#', '#', '.', '.', '.', '.', '.', '.', '#'],\n",
+       "        ['.', '.', '#', '.', '#', '#', '.', '#', '.'],\n",
+       "        ['.', '.', '#', '#', '.', '.', '#', '#', '.'],\n",
+       "        ['#', '.', '#', '.', '#', '#', '.', '#', '.']], dtype='<U1'),\n",
+       " array([['#', '.', '.', '.', '#', '#', '.', '.', '#'],\n",
+       "        ['#', '.', '.', '.', '.', '#', '.', '.', '#'],\n",
+       "        ['.', '.', '#', '#', '.', '.', '#', '#', '#'],\n",
+       "        ['#', '#', '#', '#', '#', '.', '#', '#', '.'],\n",
+       "        ['#', '#', '#', '#', '#', '.', '#', '#', '.'],\n",
+       "        ['.', '.', '#', '#', '.', '.', '#', '#', '#'],\n",
+       "        ['#', '.', '.', '.', '.', '#', '.', '.', '#']], dtype='<U1')]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse13(lines):\n",
+    "    result = []\n",
+    "    for i, line in enumerate(lines):\n",
+    "        line = line.strip()\n",
+    "        if not line:\n",
+    "            return result, lines[i+1:]\n",
+    "        else:\n",
+    "            result.append(list(line))\n",
+    "    return result, []\n",
+    "\n",
+    "def get13():\n",
+    "    patterns = []\n",
+    "    with open(f\"./data/day13.txt\") as f:\n",
+    "        lines = f.readlines()\n",
+    "        while lines:\n",
+    "            pattern, lines = parse13(lines)\n",
+    "            patterns.append(np.array(pattern))\n",
+    "    return patterns\n",
+    "\n",
+    "data13 = get13()\n",
+    "data13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "pattern = data13[0]\n",
+    "t = np.transpose(pattern)\n",
+    "\n",
+    "matchv, matchh = defaultdict(lambda: set()), defaultdict(lambda: set())\n",
+    "\n",
+    "def get_matches(pattern):\n",
+    "    matches = defaultdict(lambda: set())\n",
+    "    for i in range(len(pattern)):\n",
+    "        for j in range(i+1, len(pattern)):\n",
+    "            if np.all(pattern[i]==pattern[j]):\n",
+    "                matches[i].add(j)\n",
+    "                matches[j].add(i)\n",
+    "    return matches\n",
+    "\n",
+    "matchv, matchh = get_matches(pattern), get_matches(t)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "0 1 0\n",
+      "1 2 0\n",
+      "1 3 1\n",
+      "2 3 0\n",
+      "2 4 1\n",
+      "2 5 2\n",
+      "3 4 0\n",
+      "3 5 1\n",
+      "3 6 2\n",
+      "3 7 3\n",
+      "4 5 1\n",
+      "4 6 2\n",
+      "4 7 3\n",
+      "4 8 4\n",
+      "5 6 3\n",
+      "5 7 4\n",
+      "5 8 5\n",
+      "6 7 5\n",
+      "6 8 6\n",
+      "7 8 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def check_reflections(pattern, matches):\n",
+    "    length = len(pattern)\n",
+    "    print(length)\n",
+    "    for i in range(length):\n",
+    "        for j in range(i+1, min(length, 2*(i+1))):\n",
+    "            \n",
+    "            print(i, j, j-min(i+1, length-i-1))\n",
+    "\n",
+    "check_reflections(t, matchv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([['#.##..##.'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['##......#'],\n",
+       "        ['##......#'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['..##..##.'],\n",
+       "        ['#.#.##.#.']], dtype='<U9'),\n",
+       " array([['#.#.##.#.'],\n",
+       "        ['..##..##.'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['##......#'],\n",
+       "        ['##......#'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['#.##..##.']], dtype='<U9'),\n",
+       " array([['#.##..##.'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['##......#'],\n",
+       "        ['##......#'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['..##..##.'],\n",
+       "        ['#.#.##.#.']], dtype='<U9'))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data13[0], np.flipud(data13[0]), np.fliplr(data13[0])\n",
+    "\n",
+    "1 - 2 (8)\n",
+    "12-34 (67)\n",
+    "123-456 (456)\n",
+    "1234-5678 (2345)\n",
+    "2345-6789 (1234)\n",
+    "456-789 (123)\n",
+    "67 - 89 (12)\n",
+    "8 - 9 (1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['#.#.##.#.'],\n",
+       "       ['..##..##.'],\n",
+       "       ['..#.##.#.'],\n",
+       "       ['##......#'],\n",
+       "       ['##......#'],\n",
+       "       ['..#.##.#.'],\n",
+       "       ['#.##..##.']], dtype='<U9')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([['#.##..##.'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['##......#'],\n",
+       "        ['##......#'],\n",
+       "        ['..#.##.#.'],\n",
+       "        ['..##..##.'],\n",
+       "        ['#.#.##.#.']], dtype='<U9'),\n",
+       " array([['#...##..#'],\n",
+       "        ['#....#..#'],\n",
+       "        ['..##..###'],\n",
+       "        ['#####.##.'],\n",
+       "        ['#####.##.'],\n",
+       "        ['..##..###'],\n",
+       "        ['#....#..#']], dtype='<U9')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def count_reflections(pattern):\n",
+    "    \n",
+    "\n",
+    "def day13(data):\n",
+    "    for pattern in data:\n",
+    "        count_reflections(pattern)\n",
+    "\n",
+    "\n",
+    "day13(data13)"
+   ]
   }
  ],
  "metadata": {
