--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -728,15 +728,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wtf 4 4\n",
+      "wtf 3 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(4, 5)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pattern = data13[0]\n",
-    "t = np.transpose(pattern)\n",
-    "\n",
-    "matchv, matchh = defaultdict(lambda: set()), defaultdict(lambda: set())\n",
-    "\n",
     "def get_matches(pattern):\n",
     "    matches = defaultdict(lambda: set())\n",
     "    for i in range(len(pattern)):\n",
@@ -746,12 +760,82 @@
     "                matches[j].add(i)\n",
     "    return matches\n",
     "\n",
-    "matchv, matchh = get_matches(pattern), get_matches(t)\n"
+    "def check_reflections(pattern, matches):\n",
+    "    valids, length = [], len(pattern)\n",
+    "\n",
+    "    def check_reflection(i):\n",
+    "        distance = min(length, 2*(i+1)) - (i+1)\n",
+    "        if not distance:\n",
+    "            return\n",
+    "        for j in range(distance):\n",
+    "            # print(distance, i, j)\n",
+    "            if (i-j) not in matches[i+1+j]:\n",
+    "                return False\n",
+    "        print('wtf', i, distance)\n",
+    "        return distance\n",
+    "\n",
+    "    for i in range(length):\n",
+    "        if result := check_reflection(i):\n",
+    "            valids.append(result+1)\n",
+    "\n",
+    "    return valids\n",
+    "\n",
+    "def day13(data):\n",
+    "    hs, vs = 0, 0\n",
+    "    for pattern in data:\n",
+    "        t = np.transpose(pattern)\n",
+    "        matchh, matchv = get_matches(pattern), get_matches(t)\n",
+    "        hs += sum(check_reflections(pattern, matchh))\n",
+    "        vs += sum(check_reflections(t, matchv))\n",
+    "    return hs, vs\n",
+    "\n",
+    "day13(data13)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 0\n",
+      "2 1 0\n",
+      "3 2 0\n",
+      "4 3 0\n",
+      "4 4 0\n",
+      "4 4 1\n",
+      "4 4 2\n",
+      "4 4 3\n",
+      "wtf 4 4\n",
+      "3 5 0\n",
+      "2 6 0\n",
+      "1 7 0\n",
+      "wtf 8 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[4]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "check_reflections(t, matchv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -759,26 +843,26 @@
      "output_type": "stream",
      "text": [
       "9\n",
-      "0 1 0\n",
-      "1 2 0\n",
-      "1 3 1\n",
-      "2 3 0\n",
-      "2 4 1\n",
-      "2 5 2\n",
-      "3 4 0\n",
-      "3 5 1\n",
-      "3 6 2\n",
-      "3 7 3\n",
-      "4 5 1\n",
-      "4 6 2\n",
-      "4 7 3\n",
-      "4 8 4\n",
-      "5 6 3\n",
-      "5 7 4\n",
-      "5 8 5\n",
-      "6 7 5\n",
-      "6 8 6\n",
-      "7 8 7\n"
+      "0 1\n",
+      "1 2\n",
+      "0 3\n",
+      "2 3\n",
+      "1 4\n",
+      "0 5\n",
+      "3 4\n",
+      "2 5\n",
+      "1 6\n",
+      "0 7\n",
+      "4 5\n",
+      "3 6\n",
+      "2 7\n",
+      "1 8\n",
+      "5 6\n",
+      "4 7\n",
+      "3 8\n",
+      "6 7\n",
+      "5 8\n",
+      "7 8\n"
      ]
     }
    ],
@@ -788,9 +872,9 @@
     "    length = len(pattern)\n",
     "    print(length)\n",
     "    for i in range(length):\n",
-    "        for j in range(i+1, min(length, 2*(i+1))):\n",
-    "            \n",
-    "            print(i, j, j-min(i+1, length-i-1))\n",
+    "        distance = min(length, 2*(i+1)) - (i+1)\n",
+    "        for j in range(distance):\n",
+    "            print(i-j, i+1+j)\n",
     "\n",
     "check_reflections(t, matchv)"
    ]
@@ -833,6 +917,16 @@
    ],
    "source": [
     "data13[0], np.flipud(data13[0]), np.fliplr(data13[0])\n",
+    "\n",
+    "0 - 1\n",
+    "01-23\n",
+    "012-345\n",
+    "0123-4567\n",
+    "1234-5678\n",
+    "345-678\n",
+    "56-78\n",
+    "7-8\n",
+    "\n",
     "\n",
     "1 - 2 (8)\n",
     "12-34 (67)\n",
