--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -675,33 +675,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([['#', '.', '#', '#', '.', '.', '#', '#', '.'],\n",
-       "        ['.', '.', '#', '.', '#', '#', '.', '#', '.'],\n",
-       "        ['#', '#', '.', '.', '.', '.', '.', '.', '#'],\n",
-       "        ['#', '#', '.', '.', '.', '.', '.', '.', '#'],\n",
-       "        ['.', '.', '#', '.', '#', '#', '.', '#', '.'],\n",
-       "        ['.', '.', '#', '#', '.', '.', '#', '#', '.'],\n",
-       "        ['#', '.', '#', '.', '#', '#', '.', '#', '.']], dtype='<U1'),\n",
-       " array([['#', '.', '.', '.', '#', '#', '.', '.', '#'],\n",
-       "        ['#', '.', '.', '.', '.', '#', '.', '.', '#'],\n",
-       "        ['.', '.', '#', '#', '.', '.', '#', '#', '#'],\n",
-       "        ['#', '#', '#', '#', '#', '.', '#', '#', '.'],\n",
-       "        ['#', '#', '#', '#', '#', '.', '#', '#', '.'],\n",
-       "        ['.', '.', '#', '#', '.', '.', '#', '#', '#'],\n",
-       "        ['#', '.', '.', '.', '.', '#', '.', '.', '#']], dtype='<U1')]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parse13(lines):\n",
     "    result = []\n",
@@ -722,30 +698,28 @@
     "            patterns.append(np.array(pattern))\n",
     "    return patterns\n",
     "\n",
-    "data13 = get13()\n",
-    "data13"
+    "data13 = get13()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wtf 4 4\n",
-      "wtf 3 3\n"
+      "4 5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(4, 5)"
+       "405"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,18 +739,19 @@
     "\n",
     "    def check_reflection(i):\n",
     "        distance = min(length, 2*(i+1)) - (i+1)\n",
+    "        # print('distance', i, distance)\n",
     "        if not distance:\n",
     "            return\n",
     "        for j in range(distance):\n",
-    "            # print(distance, i, j)\n",
+    "            # print(i, i-j, i+1+j)\n",
     "            if (i-j) not in matches[i+1+j]:\n",
     "                return False\n",
-    "        print('wtf', i, distance)\n",
     "        return distance\n",
     "\n",
     "    for i in range(length):\n",
     "        if result := check_reflection(i):\n",
-    "            valids.append(result+1)\n",
+    "            # print(result+1, i)\n",
+    "            valids.append(i+1)\n",
     "\n",
     "    return valids\n",
     "\n",
@@ -785,11 +760,41 @@
     "    for pattern in data:\n",
     "        t = np.transpose(pattern)\n",
     "        matchh, matchv = get_matches(pattern), get_matches(t)\n",
+    "        # print(pattern, check_reflections(pattern, matchh), check_reflections(t, matchv))\n",
     "        hs += sum(check_reflections(pattern, matchh))\n",
     "        vs += sum(check_reflections(t, matchv))\n",
-    "    return hs, vs\n",
+    "    print(hs, vs)\n",
+    "    return hs*100+vs\n",
     "\n",
     "day13(data13)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data13[0], np.flipud(data13[0]), np.fliplr(data13[0])\n",
+    "\n",
+    "0 - 1\n",
+    "01-23\n",
+    "012-345\n",
+    "0123-4567\n",
+    "1234-5678\n",
+    "345-678\n",
+    "56-78\n",
+    "7-8\n",
+    "\n",
+    "\n",
+    "1 - 2 (8)\n",
+    "12-34 (67)\n",
+    "123-456 (456)\n",
+    "1234-5678 (2345)\n",
+    "2345-6789 (1234)\n",
+    "456-789 (123)\n",
+    "67 - 89 (12)\n",
+    "8 - 9 (1)"
    ]
   },
   {
@@ -828,55 +833,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "check_reflections(t, matchv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "0 1\n",
-      "1 2\n",
-      "0 3\n",
-      "2 3\n",
-      "1 4\n",
-      "0 5\n",
-      "3 4\n",
-      "2 5\n",
-      "1 6\n",
-      "0 7\n",
-      "4 5\n",
-      "3 6\n",
-      "2 7\n",
-      "1 8\n",
-      "5 6\n",
-      "4 7\n",
-      "3 8\n",
-      "6 7\n",
-      "5 8\n",
-      "7 8\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "def check_reflections(pattern, matches):\n",
-    "    length = len(pattern)\n",
-    "    print(length)\n",
-    "    for i in range(length):\n",
-    "        distance = min(length, 2*(i+1)) - (i+1)\n",
-    "        for j in range(distance):\n",
-    "            print(i-j, i+1+j)\n",
-    "\n",
-    "check_reflections(t, matchv)"
+    "wrong 17489"
    ]
   },
   {
