--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
     "        if not line:\n",
     "            return result, lines[i+1:]\n",
     "        else:\n",
-    "            result.append(list(line))\n",
+    "            result.append(list(map(int, line.replace('.', '0').replace('#', '1'))))\n",
     "    return result, []\n",
     "\n",
     "def get13():\n",
@@ -703,23 +703,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 5\n"
+      "(339+314j)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "405"
+       "31739"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
     "    return matches\n",
     "\n",
     "def check_reflections(pattern, matches):\n",
-    "    valids, length = [], len(pattern)\n",
+    "    length = len(pattern)\n",
     "\n",
     "    def check_reflection(i):\n",
     "        distance = min(length, 2*(i+1)) - (i+1)\n",
@@ -751,22 +751,79 @@
     "    for i in range(length):\n",
     "        if result := check_reflection(i):\n",
     "            # print(result+1, i)\n",
-    "            valids.append(i+1)\n",
+    "            yield i+1\n",
+    "    # return 0\n",
     "\n",
-    "    return valids\n",
+    "def find_reflection(pattern):\n",
+    "    match = get_matches(pattern)\n",
+    "    # print(pattern, check_reflections(pattern, matchh), check_reflections(t, matchv))\n",
+    "    for h in check_reflections(pattern, match):\n",
+    "        yield h*1j\n",
+    "    t = np.transpose(pattern)\n",
+    "    match = get_matches(t)\n",
+    "    yield from check_reflections(t, match)\n",
     "\n",
     "def day13(data):\n",
-    "    hs, vs = 0, 0\n",
+    "    result = 0\n",
     "    for pattern in data:\n",
-    "        t = np.transpose(pattern)\n",
-    "        matchh, matchv = get_matches(pattern), get_matches(t)\n",
-    "        # print(pattern, check_reflections(pattern, matchh), check_reflections(t, matchv))\n",
-    "        hs += sum(check_reflections(pattern, matchh))\n",
-    "        vs += sum(check_reflections(t, matchv))\n",
-    "    print(hs, vs)\n",
-    "    return hs*100+vs\n",
+    "        result += next(find_reflection(pattern))\n",
+    "    print(result)\n",
+    "    return int(result.imag*100+result.real)\n",
     "\n",
     "day13(data13)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31539"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_close_matches(pattern):\n",
+    "    for i in range(len(pattern)):\n",
+    "        for j in range(i+1, len(pattern)):\n",
+    "            diffs = np.count_nonzero(pattern[i] != pattern[j])\n",
+    "            if diffs == 1:\n",
+    "                p = pattern.copy()\n",
+    "                saved, p[i] = p[i], p[j]\n",
+    "                yield p, get_matches(p)\n",
+    "                p[i], p[j] = saved, saved\n",
+    "                yield p, get_matches(p)\n",
+    "\n",
+    "\n",
+    "def find_smudged_reflection(pattern, disallowed):\n",
+    "    for p, match in get_close_matches(pattern):\n",
+    "        for h in check_reflections(p, match):\n",
+    "            # print('h', h, disallowed)\n",
+    "            if h != disallowed.imag:\n",
+    "                return h*1j\n",
+    "    for p, match in get_close_matches(np.transpose(pattern)):\n",
+    "        for v in check_reflections(p, match):\n",
+    "            # print('v', v, disallowed)\n",
+    "            if v != disallowed.real:\n",
+    "                return v\n",
+    "    print(p)\n",
+    "\n",
+    "def day13_2(data):\n",
+    "    result = 0\n",
+    "    for pattern in data:\n",
+    "        disallowed = next(find_reflection(pattern))\n",
+    "        result += find_smudged_reflection(pattern, disallowed)\n",
+    "        # print('r', result)\n",
+    "    return int(result.imag*100+result.real)\n",
+    "\n",
+    "day13_2(data13)"
    ]
   },
   {
@@ -833,7 +890,7 @@
     }
    ],
    "source": [
-    "wrong 17489"
+    "wrong 28513"
    ]
   },
   {
