--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -675,9 +675,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 247,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31739, 31539)"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def parse13(lines):\n",
     "    result = []\n",
@@ -698,33 +709,8 @@
     "            patterns.append(np.array(pattern))\n",
     "    return patterns\n",
     "\n",
-    "data13 = get13()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(339+314j)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "31739"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "data13 = get13()\n",
+    "\n",
     "def get_matches(pattern):\n",
     "    matches = defaultdict(lambda: set())\n",
     "    for i in range(len(pattern)):\n",
@@ -734,62 +720,6 @@
     "                matches[j].add(i)\n",
     "    return matches\n",
     "\n",
-    "def check_reflections(pattern, matches):\n",
-    "    length = len(pattern)\n",
-    "\n",
-    "    def check_reflection(i):\n",
-    "        distance = min(length, 2*(i+1)) - (i+1)\n",
-    "        # print('distance', i, distance)\n",
-    "        if not distance:\n",
-    "            return\n",
-    "        for j in range(distance):\n",
-    "            # print(i, i-j, i+1+j)\n",
-    "            if (i-j) not in matches[i+1+j]:\n",
-    "                return False\n",
-    "        return distance\n",
-    "\n",
-    "    for i in range(length):\n",
-    "        if result := check_reflection(i):\n",
-    "            # print(result+1, i)\n",
-    "            yield i+1\n",
-    "    # return 0\n",
-    "\n",
-    "def find_reflection(pattern):\n",
-    "    match = get_matches(pattern)\n",
-    "    # print(pattern, check_reflections(pattern, matchh), check_reflections(t, matchv))\n",
-    "    for h in check_reflections(pattern, match):\n",
-    "        yield h*1j\n",
-    "    t = np.transpose(pattern)\n",
-    "    match = get_matches(t)\n",
-    "    yield from check_reflections(t, match)\n",
-    "\n",
-    "def day13(data):\n",
-    "    result = 0\n",
-    "    for pattern in data:\n",
-    "        result += next(find_reflection(pattern))\n",
-    "    print(result)\n",
-    "    return int(result.imag*100+result.real)\n",
-    "\n",
-    "day13(data13)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 240,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31539"
-      ]
-     },
-     "execution_count": 240,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "def get_close_matches(pattern):\n",
     "    for i in range(len(pattern)):\n",
     "        for j in range(i+1, len(pattern)):\n",
@@ -801,29 +731,53 @@
     "                p[i], p[j] = saved, saved\n",
     "                yield p, get_matches(p)\n",
     "\n",
+    "def check_reflections(pattern, matches):\n",
+    "    length = len(pattern)\n",
+    "\n",
+    "    def check_reflection(i):\n",
+    "        distance = min(length, 2*(i+1)) - (i+1)\n",
+    "        if not distance:\n",
+    "            return\n",
+    "        for j in range(distance):\n",
+    "            if (i-j) not in matches[i+1+j]:\n",
+    "                return False\n",
+    "        return distance\n",
+    "\n",
+    "    for i in range(length):\n",
+    "        if check_reflection(i):\n",
+    "            yield i+1\n",
+    "\n",
+    "def find_reflection(pattern):\n",
+    "    match = get_matches(pattern)\n",
+    "    for h in check_reflections(pattern, match):\n",
+    "        yield h*1j\n",
+    "    t = np.transpose(pattern)\n",
+    "    match = get_matches(t)\n",
+    "    yield from check_reflections(t, match)\n",
     "\n",
     "def find_smudged_reflection(pattern, disallowed):\n",
     "    for p, match in get_close_matches(pattern):\n",
     "        for h in check_reflections(p, match):\n",
-    "            # print('h', h, disallowed)\n",
     "            if h != disallowed.imag:\n",
     "                return h*1j\n",
     "    for p, match in get_close_matches(np.transpose(pattern)):\n",
     "        for v in check_reflections(p, match):\n",
-    "            # print('v', v, disallowed)\n",
     "            if v != disallowed.real:\n",
     "                return v\n",
-    "    print(p)\n",
     "\n",
-    "def day13_2(data):\n",
-    "    result = 0\n",
+    "def day13(data):\n",
+    "    def summarize(n):\n",
+    "        return int(n.imag*100+n.real)\n",
+    "\n",
+    "    part1, part2 = 0, 0\n",
     "    for pattern in data:\n",
     "        disallowed = next(find_reflection(pattern))\n",
-    "        result += find_smudged_reflection(pattern, disallowed)\n",
-    "        # print('r', result)\n",
-    "    return int(result.imag*100+result.real)\n",
+    "        part1 += disallowed\n",
+    "        part2 += find_smudged_reflection(pattern, disallowed)\n",
     "\n",
-    "day13_2(data13)"
+    "    return summarize(part1), summarize(part2)\n",
+    "\n",
+    "day13(data13)"
    ]
   },
   {
@@ -831,192 +785,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data13[0], np.flipud(data13[0]), np.fliplr(data13[0])\n",
-    "\n",
-    "0 - 1\n",
-    "01-23\n",
-    "012-345\n",
-    "0123-4567\n",
-    "1234-5678\n",
-    "345-678\n",
-    "56-78\n",
-    "7-8\n",
-    "\n",
-    "\n",
-    "1 - 2 (8)\n",
-    "12-34 (67)\n",
-    "123-456 (456)\n",
-    "1234-5678 (2345)\n",
-    "2345-6789 (1234)\n",
-    "456-789 (123)\n",
-    "67 - 89 (12)\n",
-    "8 - 9 (1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 0 0\n",
-      "2 1 0\n",
-      "3 2 0\n",
-      "4 3 0\n",
-      "4 4 0\n",
-      "4 4 1\n",
-      "4 4 2\n",
-      "4 4 3\n",
-      "wtf 4 4\n",
-      "3 5 0\n",
-      "2 6 0\n",
-      "1 7 0\n",
-      "wtf 8 0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[4]"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wrong 28513"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([['#.##..##.'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['##......#'],\n",
-       "        ['##......#'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['..##..##.'],\n",
-       "        ['#.#.##.#.']], dtype='<U9'),\n",
-       " array([['#.#.##.#.'],\n",
-       "        ['..##..##.'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['##......#'],\n",
-       "        ['##......#'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['#.##..##.']], dtype='<U9'),\n",
-       " array([['#.##..##.'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['##......#'],\n",
-       "        ['##......#'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['..##..##.'],\n",
-       "        ['#.#.##.#.']], dtype='<U9'))"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data13[0], np.flipud(data13[0]), np.fliplr(data13[0])\n",
-    "\n",
-    "0 - 1\n",
-    "01-23\n",
-    "012-345\n",
-    "0123-4567\n",
-    "1234-5678\n",
-    "345-678\n",
-    "56-78\n",
-    "7-8\n",
-    "\n",
-    "\n",
-    "1 - 2 (8)\n",
-    "12-34 (67)\n",
-    "123-456 (456)\n",
-    "1234-5678 (2345)\n",
-    "2345-6789 (1234)\n",
-    "456-789 (123)\n",
-    "67 - 89 (12)\n",
-    "8 - 9 (1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([['#.#.##.#.'],\n",
-       "       ['..##..##.'],\n",
-       "       ['..#.##.#.'],\n",
-       "       ['##......#'],\n",
-       "       ['##......#'],\n",
-       "       ['..#.##.#.'],\n",
-       "       ['#.##..##.']], dtype='<U9')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([['#.##..##.'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['##......#'],\n",
-       "        ['##......#'],\n",
-       "        ['..#.##.#.'],\n",
-       "        ['..##..##.'],\n",
-       "        ['#.#.##.#.']], dtype='<U9'),\n",
-       " array([['#...##..#'],\n",
-       "        ['#....#..#'],\n",
-       "        ['..##..###'],\n",
-       "        ['#####.##.'],\n",
-       "        ['#####.##.'],\n",
-       "        ['..##..###'],\n",
-       "        ['#....#..#']], dtype='<U9')]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "def count_reflections(pattern):\n",
-    "    \n",
-    "\n",
-    "def day13(data):\n",
-    "    for pattern in data:\n",
-    "        count_reflections(pattern)\n",
-    "\n",
-    "\n",
-    "day13(data13)"
-   ]
   }
  ],
  "metadata": {
