--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "(31739, 31539)"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,40 +782,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data14 = np.array(data(14, list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "repeated 996 2\n",
-      "repeated 997 3\n",
-      "repeated 998 4\n",
-      "repeated 999 5\n",
-      "[['.' '.' '.' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '#' '.' '.' '.' 'O' '#']\n",
-      " ['.' '.' '.' '.' '.' '#' '#' '.' '.' '.']\n",
-      " ['.' '.' '.' '#' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' 'O' 'O' 'O' '#' '.']\n",
-      " ['.' 'O' '#' '.' '.' '.' 'O' '#' '.' '#']\n",
-      " ['.' '.' '.' '.' 'O' '#' '.' '.' '.' 'O']\n",
-      " ['.' '.' '.' '.' '.' '.' 'O' 'O' 'O' 'O']\n",
-      " ['#' '.' '.' '.' '.' '#' '#' '#' '.' 'O']\n",
-      " ['#' '.' 'O' 'O' 'O' '#' '.' '.' 'O' 'O']] 999\n"
-     ]
+     "data": {
+      "text/plain": [
+       "112773"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "data14 = np.array(data(14, list))\n",
+    "\n",
     "def gen_tilts():\n",
     "    def _tilt(col, direction):\n",
     "        rock_groups = col.split('#')\n",
@@ -839,67 +822,12 @@
     "        case 2: return np.apply_along_axis(tiltdown, 0, dish)\n",
     "    return np.apply_along_axis(tiltdown, 1, dish)\n",
     "\n",
-    "arr = data14.copy()\n",
-    "\n",
-    "repeated = {}\n",
-    "\n",
-    "i, target = 0, 1000000000\n",
-    "\n",
-    "while i < target-1:\n",
-    "    for j in range(4):\n",
-    "        arr = rotate(arr, j)\n",
-    "        # print(arr, i, j)\n",
-    "    s = str(arr)\n",
-    "    # print(s, i)\n",
-    "    if rs := repeated.get(s):\n",
-    "        i += max(1, ((target-i)//(i-rs))*(i-rs))\n",
-    "        print('repeated', i, rs)\n",
-    "    else:\n",
-    "        repeated[s] = i\n",
-    "        i += 1 \n",
-    "\n",
-    "print(arr, i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['O' 'O' 'O' 'O' '.' '#' '.' 'O' '.' '.']\n",
-      " ['O' 'O' '.' '.' '#' '.' '.' '.' '.' '#']\n",
-      " ['O' 'O' '.' '.' 'O' '#' '#' '.' '.' 'O']\n",
-      " ['O' '.' '.' '#' '.' 'O' 'O' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' '.' '.' '.' '#' '.']\n",
-      " ['.' '.' '#' '.' '.' '.' '.' '#' '.' '#']\n",
-      " ['.' '.' 'O' '.' '.' '#' '.' 'O' '.' 'O']\n",
-      " ['.' '.' 'O' '.' '.' '.' '.' '.' '.' '.']\n",
-      " ['#' '.' '.' '.' '.' '#' '#' '#' '.' '.']\n",
-      " ['#' '.' '.' '.' '.' '#' '.' '.' '.' '.']] [0, 0, 1, 3, 0, 0, 3, 4, 2, 5]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "136"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "north = rotate(data14, 0)\n",
     "\n",
     "def calculate_weight(arr):\n",
     "    weight = 0\n",
     "    stones = list(reversed(np.count_nonzero(arr == 'O', 1)))\n",
-    "    print(arr, stones)\n",
+    "    # print(arr, stones)\n",
     "    for i in range(len(arr)):\n",
     "        weight += (i+1)*stones[i]\n",
     "    return weight\n",
@@ -909,38 +837,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['.' '.' '.' '.' '.' '#' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '#' '.' '.' '.' 'O' '#']\n",
-      " ['.' '.' '.' '.' '.' '#' '#' '.' '.' '.']\n",
-      " ['.' '.' '.' '#' '.' '.' '.' '.' '.' '.']\n",
-      " ['.' '.' '.' '.' '.' 'O' 'O' 'O' '#' '.']\n",
-      " ['.' 'O' '#' '.' '.' '.' 'O' '#' '.' '#']\n",
-      " ['.' '.' '.' '.' 'O' '#' '.' '.' '.' 'O']\n",
-      " ['.' '.' '.' '.' '.' '.' 'O' 'O' 'O' 'O']\n",
-      " ['#' '.' '.' '.' '.' '#' '#' '#' '.' 'O']\n",
-      " ['#' '.' 'O' 'O' 'O' '#' '.' '.' 'O' 'O']] [5, 1, 4, 2, 2, 3, 0, 0, 1, 0]\n"
+      "117 95 999999902\n",
+      "999999998\n",
+      "999999998 1000000000\n",
+      "999999999 1000000000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "64"
+       "98894"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_weight(arr)"
+    "arr = data14.copy()\n",
+    "repeated = {}\n",
+    "\n",
+    "i, target = 0, 1000000000\n",
+    "\n",
+    "for i in range(target):\n",
+    "    for j in range(4):\n",
+    "        arr = rotate(arr, j)\n",
+    "        # print(arr, i, j)\n",
+    "    s = arr.data.tobytes()\n",
+    "    if rs := repeated.get(s):\n",
+    "        print(i, rs, ((target-rs)//(i-rs))*(i-rs))\n",
+    "        i = ((target-rs)//(i-rs))*(i-rs) + rs + 1\n",
+    "        print(i)\n",
+    "        break\n",
+    "    repeated[s] = i\n",
+    "        \n",
+    "for i in range(i, target):\n",
+    "    print(i, target)\n",
+    "    for j in range(4):\n",
+    "        arr = rotate(arr, j)\n",
+    "\n",
+    "calculate_weight(arr)\n",
+    "# wrong 99608, 99523\n",
+    "# wrong 98885\n",
+    "\n",
+    "# 98873"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000000000"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "999999936+64"
    ]
   }
  ],
