--- a/2023/2023.ipynb
+++ b/2023/2023.ipynb
@@ -782,16 +782,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "112773"
+       "(112773, 98894)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,21 +799,11 @@
    "source": [
     "data14 = np.array(data(14, list))\n",
     "\n",
-    "def gen_tilts():\n",
-    "    def _tilt(col, direction):\n",
-    "        rock_groups = col.split('#')\n",
-    "        # print(rock_groups, list(map(lambda x: ''.join(sorted(x, reverse=direction)), rock_groups)))\n",
-    "        tilted = '#'.join(map(lambda x: ''.join(sorted(x, reverse=direction)), rock_groups))\n",
-    "        return list(tilted)\n",
-    "\n",
-    "    def tilt(col, direction):\n",
-    "        col = ''.join(col)\n",
-    "        return _tilt(col, direction)\n",
-    "    \n",
-    "    return lambda x: tilt(x, True), lambda x: tilt(x, False)\n",
-    "\n",
-    "tiltup, tiltdown = gen_tilts()\n",
-    "\n",
+    "def tilt(col, direction):\n",
+    "    rock_groups = ''.join(col).split('#')\n",
+    "    tilted = '#'.join(map(lambda x: ''.join(sorted(x, reverse=direction)), rock_groups))\n",
+    "    return list(tilted)\n",
+    "tiltup, tiltdown = lambda x: tilt(x, True), lambda x: tilt(x, False)\n",
     "\n",
     "def rotate(dish, direction):\n",
     "    match direction:\n",
@@ -822,94 +812,42 @@
     "        case 2: return np.apply_along_axis(tiltdown, 0, dish)\n",
     "    return np.apply_along_axis(tiltdown, 1, dish)\n",
     "\n",
-    "north = rotate(data14, 0)\n",
-    "\n",
     "def calculate_weight(arr):\n",
     "    weight = 0\n",
     "    stones = list(reversed(np.count_nonzero(arr == 'O', 1)))\n",
-    "    # print(arr, stones)\n",
     "    for i in range(len(arr)):\n",
     "        weight += (i+1)*stones[i]\n",
     "    return weight\n",
     "\n",
-    "calculate_weight(north)"
+    "def day14_1(data):\n",
+    "    return calculate_weight(rotate(data, 0))\n",
+    "\n",
+    "def cycle(dish):\n",
+    "    for j in range(4):\n",
+    "        dish = rotate(dish, j)\n",
+    "    return dish\n",
+    "\n",
+    "def day14_2(arr, target=1000000000):\n",
+    "    repeated = {}\n",
+    "    for i in range(target):\n",
+    "        arr = cycle(arr)\n",
+    "        if (rs := repeated.setdefault(arr.data.tobytes(), i)) != i:\n",
+    "            i = ((target-rs)//(i-rs))*(i-rs) + rs + 1\n",
+    "            break\n",
+    "    for i in range(i, target):\n",
+    "        arr = cycle(arr)\n",
+    "\n",
+    "    return calculate_weight(arr)\n",
+    "\n",
+    "day14_1(data14), day14_2(data14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "117 95 999999902\n",
-      "999999998\n",
-      "999999998 1000000000\n",
-      "999999999 1000000000\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "98894"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr = data14.copy()\n",
-    "repeated = {}\n",
-    "\n",
-    "i, target = 0, 1000000000\n",
-    "\n",
-    "for i in range(target):\n",
-    "    for j in range(4):\n",
-    "        arr = rotate(arr, j)\n",
-    "        # print(arr, i, j)\n",
-    "    s = arr.data.tobytes()\n",
-    "    if rs := repeated.get(s):\n",
-    "        print(i, rs, ((target-rs)//(i-rs))*(i-rs))\n",
-    "        i = ((target-rs)//(i-rs))*(i-rs) + rs + 1\n",
-    "        print(i)\n",
-    "        break\n",
-    "    repeated[s] = i\n",
-    "        \n",
-    "for i in range(i, target):\n",
-    "    print(i, target)\n",
-    "    for j in range(4):\n",
-    "        arr = rotate(arr, j)\n",
-    "\n",
-    "calculate_weight(arr)\n",
-    "# wrong 99608, 99523\n",
-    "# wrong 98885\n",
-    "\n",
-    "# 98873"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000000000"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "999999936+64"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
